CHATS_SIT/force-app/main/default/objects/Reverse_Referral_Interface_Report__c.object
<CustomObject>
    <label>Reverse Referral Interface Report</label>
    <nameField>
        <displayFormat>RR-{0000000}</displayFormat>
        <label>Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Reverse Referral Interface Reports</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
    <fields>
        <fullName>CBMS_Case_Id__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>CBMS Case ID</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CCCAP_Case_Id__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>CCCAP Case ID</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields xmlns="http://soap.sforce.com/2006/04/metadata">
        <fullName>Date_Sent_to_CBMS__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Date Sent to CBMS</label>
        <type>Date</type>
    </fields>
    <fields xmlns="http://soap.sforce.com/2006/04/metadata">
        <fullName>Referral_Id__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Referral Id</label>
        <length>18</length>
        <type>Text</type>
    </fields>    
    <fields xmlns="http://soap.sforce.com/2006/04/metadata">
        <fullName>IDN_EXTNL__c</fullName>
        <caseSensitive>true</caseSensitive>
        <externalId>true</externalId>
        <label>Reverse Referral ID External</label>
        <length>50</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
</CustomObject>