CHATS_SIT/force-app/main/default/objects/Reverse_Referral_Interface_Report__c/fields/Date_Sent_to_CBMS__c.field-meta.xml
<CustomField>
    <fullName>Date_Sent_to_CBMS__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Date Sent to CBMS</label>
    <type>Date</type>
</CustomField>