CHATS_SIT/force-app/main/default/objects/Reverse_Referral_Interface_Report__c/fields/IDN_EXTNL__c.field-meta.xml
<CustomField>
    <fullName>IDN_EXTNL__c</fullName>
    <caseSensitive>true</caseSensitive>
    <encryptionScheme>None</encryptionScheme>
    <externalId>true</externalId>
    <label>Reverse Referral ID External</label>
    <length>50</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>