CHATS_SIT/force-app/main/default/objects/Reverse_Referral_Interface_Report__c/fields/Referral_Id__c.field-meta.xml
<CustomField>
    <fullName>Referral_Id__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Referral Id</label>
    <length>18</length>
    <type>Text</type>
</CustomField>